<resources>
    <string name="app_name">GUIfun</string>
    <string name="showPass">Pokaż hasło</string>
    <string name="Kawa">Kawa</string>
    <string name="Herbata">Herbata</string>
    <string name="Ziola">Ziółka</string>
    <string name="sok">Sok</string>
    <string name="przepisz">Przepisz</string>

    <string-array name="country_arrays">
        <item>Polska</item>
        <item>Ukraina</item>
        <item>Niemcy</item>
        <item>Francja</item>
        <item>Włochy</item>
        <item>Singapór</item>
        <item>Nowa Zelandia</item>
        <item>Portugalia</item>
    </string-array>

</resources>
